// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withTooltip tests does not render a tooltip when not specified 1`] = `
<body>
  <div>
    <div>
      foobar
    </div>
  </div>
</body>
`;

exports[`withTooltip tests renders a tooltip when specified without id 1`] = `
<body>
  <div>
    <div
      id="tooltip_target_2"
    >
      foobar
      <div />
    </div>
  </div>
</body>
`;

exports[`withTooltip tests when a tooltip ReactNode and id is specified renders 1`] = `
<body>
  <div>
    <div
      data-testid="my-test-id"
      id="bat"
    >
      foobar
      <div />
    </div>
  </div>
</body>
`;

exports[`withTooltip tests when a tooltip ReactNode and id is specified when hovering the component renders 1`] = `
<body>
  <div>
    <div
      data-testid="my-test-id"
      id="bat"
    >
      foobar
      <div />
    </div>
  </div>
  <div
    class="Tooltip narrow right formatter"
    role="tooltip"
    style="left: 10px; top: 0px;"
  >
    my-tooltip
  </div>
</body>
`;

exports[`withTooltip tests when a tooltip via props and id is specified renders 1`] = `
<body>
  <div>
    <div
      data-testid="my-test-id"
      id="bat"
    >
      foobar
      <div />
    </div>
  </div>
</body>
`;

exports[`withTooltip tests when a tooltip via props and id is specified when hovering the component renders 1`] = `
<body>
  <div>
    <div
      data-testid="my-test-id"
      id="bat"
    >
      foobar
      <div />
    </div>
  </div>
  <div
    class="Tooltip narrow right formatter"
    role="tooltip"
    style="left: 10px; top: 0px;"
  >
    my-tooltip
  </div>
</body>
`;
